match pairs game completed with time and score showing resume and play again and random facts are remaining

--- a/Match_pairs_level.html
+++ b/Match_pairs_level.html
@@ -23,17 +23,17 @@
   </div>
 <div class="center">
   <div class="image-container">
-    <a href="#" onclick="showPopup('play1_level.html')">
+    <a href="#" onclick="showPopup('match_pairs_easy.html')">
       <img src="images/easy.jpg" alt="First Image"  class=" custom-image float-animation">
     </a>
   </div>
   <div class="image-container">
-    <a href="#" onclick="showPopup('play2_level.html')">
+    <a href="#" onclick="showPopup('match_pairs_medium.html')">
       <img src="images/medium.jpeg" alt="Second Image"class="custom-image float-animation">
     </a>
   </div>
   <div class="image-container">
-    <a href="#" onclick="showPopup('play3_level.html')">
+    <a href="#" onclick="showPopup('match_pair_hard.html')">
       <img src="images/hard.jpg" alt="Third Image"class ="custom-image float-animation">
     </a>
   </div>
