--- a/what_goes_together_level.html
+++ b/what_goes_together_level.html
@@ -23,17 +23,17 @@
       </div>
 <div class="center">
   <div class="image-container">
-    <a href="#" onclick="showPopup('play1_level.html')">
+    <a href="#" onclick="showPopup('what_goes_together_easy.html')">
       <img src="images/easy.jpg" alt="First Image" class="custom-image float-animation">
     </a>
   </div>
   <div class="image-container">
-    <a href="#" onclick="showPopup('play2_level.html')">
+    <a href="#" onclick="showPopup('what_goes_together_medium.html')">
       <img src="images/medium.jpeg" alt="Second Image" class="custom-image float-animation">
     </a>
   </div>
   <div class="image-container">
-    <a href="#" onclick="showPopup('play3_level.html')">
+    <a href="#" onclick="showPopup('what_goes_together_hard.html')">
       <img src="images/hard.jpg" alt="Third Image"class="custom-image float-animation">
     </a>
   </div>
