--- a/match_pairs_easy.html
+++ b/match_pairs_easy.html
@@ -161,6 +161,8 @@ button:hover {
     let startTime = 0;
     let timerInterval;
     let elapsedTimeInSeconds = 0;
+    const maxAllowedTimeInSeconds = 90; // 2 minutes
+
 
 
     const imageUrls = [
@@ -234,7 +236,44 @@ button:hover {
       const minutes = Math.floor(elapsedTimeInSeconds / 60);
       const seconds = elapsedTimeInSeconds % 60;
       document.getElementById('time').textContent = `Time: ${minutes}:${seconds.toString().padStart(2, '0')}`;
+      if (elapsedTimeInSeconds >= maxAllowedTimeInSeconds) {
+    stopTimer();
+    showLossPopup();
+  }
     }
+    function showLossPopup() {
+  const modalContainer = document.createElement('div');
+  modalContainer.className = 'modal';
+
+  const modalContent = document.createElement('div');
+  modalContent.className = 'modal-content';
+
+  const closeButton = document.createElement('span');
+  closeButton.className = 'close-button';
+  closeButton.innerHTML = '&times;';
+  closeButton.onclick = closePopup;
+
+  const modalTitle = document.createElement('h2');
+  modalTitle.textContent = 'Game Over';
+
+  const modalText = document.createElement('p');
+  modalText.textContent = 'Sorry, you ran out of time. Better luck next time!';
+
+  const playAgainButton = document.createElement('button');
+  playAgainButton.textContent = 'Play Again';
+  playAgainButton.onclick = playAgain;
+
+  modalContent.appendChild(closeButton);
+  modalContent.appendChild(modalTitle);
+  modalContent.appendChild(modalText);
+  modalContent.appendChild(playAgainButton);
+
+  modalContainer.appendChild(modalContent);
+  document.body.appendChild(modalContainer);
+
+  modalContainer.style.display = 'block';
+}
+
 
 
     function stopTimer() {
