--- a/match_pairs_medium.html
+++ b/match_pairs_medium.html
@@ -87,6 +87,58 @@ button {
 button:hover {
   background-color: #45a049;
 }
+@media screen and (max-width: 1200px) {
+  .game-container {
+    max-width: 1000px;
+    margin-top: 100px;
+
+  }
+  .card {
+      width: 100px;
+      height: 150px;
+    }
+   
+}
+@media screen and (max-width: 1200px) {
+  .game-container {
+    max-width: 800px;
+    margin-top: 100px;
+
+  }
+  .card {
+      width: 100px;
+      height: 150px;
+    }
+   
+}
+@media screen and (max-width: 720px) {
+  .game-container {
+    max-width: 600px;
+    margin-top: 100px;
+  
+  }
+  .card {
+      width: 100px;
+      height: 150px;
+    }
+   
+
+ 
+}
+@media screen and (max-width: 600px) {
+  .game-container {
+    max-width: 500px;
+    margin-top: 100px;
+  
+  }
+  .card {
+      width: 80px;
+      height: 100px;
+    }
+   
+
+ 
+}
 
  
 
