--- a/what_goes_together_easy.html
+++ b/what_goes_together_easy.html
@@ -73,6 +73,31 @@ button {
 button:hover {
   background-color: #45a049;
 }
+@media screen and (max-width: 900px) {
+  .game-container {
+    max-width: 500px;
+
+  }
+  .card {
+      width: 100px;
+      height: 150px;
+    }
+   
+}
+@media screen and (max-width: 640px) {
+  .game-container {
+    max-width: 400px;
+    margin-top: 100px;
+  
+  }
+  .card {
+      width: 100px;
+      height: 150px;
+    }
+   
+
+ 
+}
 
   </style>
 </head>
