--- a/what_goes_together_hard.html
+++ b/what_goes_together_hard.html
@@ -71,6 +71,59 @@ button {
 button:hover {
   background-color: #45a049;
 }
+@media screen and (max-width: 1200px) {
+  .game-container {
+    max-width: 1000px;
+    margin-top: 100px;
+
+  }
+  .card {
+      width: 100px;
+      height: 150px;
+    }
+   
+}
+@media screen and (max-width: 1200px) {
+  .game-container {
+    max-width: 800px;
+    margin-top: 100px;
+
+  }
+  .card {
+      width: 90px;
+      height: 150px;
+    }
+   
+}
+@media screen and (max-width: 940px) {
+  .game-container {
+    max-width: 900px;
+    margin-top: 100px;
+  
+  }
+  .card {
+      width: 80px;
+      height: 120px;
+    }
+   
+}
+@media screen and (max-width: 720px) {
+  .game-container {
+    max-width: 640px;
+    margin-top: 100px;
+  
+  }
+  .card-container 
+    {
+      grid-template-columns: repeat(3, 1fr);
+     
+    }
+  .card {
+      width: 100px;
+      height: 150px;
+    }
+   
+}
 
   </style>
 </head>
