Enhancement of game

--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@ font-size: 7vw;
     </div>
     <div class="image-container">
       <a href="spot_the_differnce_level.html">
-        <img src="images/spot_the_differnce.jpeg" alt="Second Image" class=" custom-image float-animation">
+        <img src="images/spot_the_difference_background.jpg" alt="Second Image" class=" custom-image float-animation">
       </a>
     </div>
     <div class="image-container">
       <a href="what_goes_together_level.html">
-        <img src="images/what_goes_together.jpeg" alt="Third Image" class="custom-image float-animation">
+        <img src="images/what_goes_together_background.png" alt="Third Image" class="custom-image float-animation">
       </a>
     </div>
   </div>
